--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,34 @@
     display: inline-block;
     font-size: 0;
   }
-  .photo-section {
-    width: 100px;
-    height: inherit;
-    border: 1px solid #000;
-    display: inline-block;
-    position: relative;
-    transition: width 200ms linear;
-  }
-  /* full size of the photo*/
-  .photo-section:hover {
-    width: 250px;
-  }
-  .c1 {background: #999;}.c2 {background: #888;}.c3 {background: #777;}
+  .box {
+ /* flex: 1;*/
+  overflow: hidden;
+  transition: .5s;
+  margin: 0 2%;
+  box-shadow: 0 20px 30px rgba(0,0,0,.1);
+  line-height: 0;
+}
+
+.box > img {
+  width: 20vh;
+  height: 90vh;
+  object-fit: cover; 
+  transition: .5s;
+}
+
+.box > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 2.6;
+}
+
+/*.box:hover { flex: 1 1 50%; }*/
+.box:hover > img {
+  width: 100%;
+  height: 100%;
+}
+ 
+  
