--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,125 @@
-#response-container {
-    height: 300px;
-    /*border: 1px solid #000;*/
-    display: inline-block;
-    font-size: 0;
-  }
-  .box {
- /* flex: 1;*/
-  overflow: hidden;
-  transition: .5s;
-  margin: 0 2%;
-  box-shadow: 0 20px 30px rgba(0,0,0,.1);
-  line-height: 0;
+@-webkit-keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
+}
+@keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
 }
 
-.box > img {
-  width: 20vh;
-  height: 90vh;
-  object-fit: cover; 
-  transition: .5s;
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 15px;
 }
-
-.box > span {
-  font-size: 3.8vh;
-  display: block;
-  text-align: center;
-  height: 10vh;
-  line-height: 2.6;
-}
-
-/*.box:hover { flex: 1 1 50%; }*/
-.box:hover > img {
+.gallery__img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
+.gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+.gallery__item--2 {
+  grid-column-start: 4;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+.gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 4;
+  grid-row-end: 9;
+}
+.gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 8;
+}
+.gallery__item--5 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 7;
+  grid-row-end: 11;
+}
+
+.Find-Your-Art {
+  text-align: center;
+  font-size: 70px;
+  font: bold ;
+  border: 10px solid black;
+  color:black;
+  margin-bottom: 15px;
+}
+
+.label {
+  color: #d9b310;
+  align-content: center;
+}
+
+.title {
+  width: 300px;
+  border: 15px solid black;
+  padding: 50px;
+  margin: 10px;
+  font: bold; 
+  color: black;
+}
+body {
+  background-color:#0b3c5d
+}
+
+.box-input {
+  background-color: #0b3c5d;
+  border:10px solid #328cc1;
+}
+
+p {
+  color: #d9b310;
+}
+
+
+#response-container {
+    width: 100%;
+    padding: 4% 2%;
+    box-sizing: border-box;
+    height: 100vh;
+  }
+  
+  .box {
+    flex: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin: 0 2%;
+    box-shadow: 0 20px 30px rgba(0,0,0,.1);
+    line-height: 0;
+  }
+  
+  .box > img {
+    width: 200%;
+    height: 90vh;
+    object-fit: cover; 
+    transition: .5s;
+  }
+  
+  .box > span {
+    font-size: 3.8vh;
+    display: block;
+    text-align: center;
+    height: 10vh;
+    line-height: 2.6;
+  }
+  
+  .box:hover { flex: 1 1 70%; }
+  .box:hover > img {
+    width: 100%;
+    height: 100%;
+  }
  
   
