--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,16 +7,28 @@
     to { opacity: 1; }
 }
 
+:root {
+  --body-color: #0a0442;
+  --body-color-2:#191061;
+  --body-color-3:#040023;
+  --highlight-color-1: #dd9800;
+  --highlight-color-2: #2c2292;
+  --accent-color-1: #00e5e0;
+  --accent-color-2: #781196;
+}
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 5vw);
   grid-gap: 15px;
+  border-left: 5px solid var(--body-color-2);
 }
 .gallery__img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+
 }
 .gallery__item--1 {
   grid-column-start: 1;
@@ -53,43 +65,52 @@
   text-align: center;
   font-size: 55px;
   font: bold ;
-  border: 10px solid black;
-  color:black;
+  border-bottom: 4px solid var(--body-color-2);
+  color:white;
   margin-bottom: 15px;
+  
 }
 
 .label {
-  color: #d9b310;
+  color: var(--highlight-color-1);
   align-content: center;
   font-weight: bolder;
 }
 
+.white{
+  background: var(--body-color-2);
+  border-radius: 15px;
+  box-shadow: black;
+  height: 100vh;
+}
+
 .title {
   width: 300px;
-  border: 15px solid black;
+  border-bottom: 4px solid var(--highlight-color-2);
   padding: 50px;
   margin: 10px;
-  font: bold;
+  font-weight: bold;
   font-size: 50px; 
-  color: black;
+  color: white;
 }
 body {
-  background-color:#0b3c5d
+  background: linear-gradient(0deg,var(--body-color-3), var(--body-color));
 }
 
 .box-input {
-  background-color: #0b3c5d;
-  border:10px solid #328cc1;
+  background: var(--highlight-color-2);
+  border-top:5px solid var(--body-color-2);
   text-align: center;
+  box-shadow: var(--body-color-3);
+  border-radius: 5px;
 }
 
 p {
-  color: #d9b310;
-  font-weight: bold;
+  color: var(--highlight-color-1);
 }
 
 #priorsearchterms {
-  color: #d9b310;
+  color: var(--highlight-color-1);
   font-weight: bold;
   text-align: center;
 }
@@ -129,5 +150,29 @@ p {
   .box:hover > img {
     width: 100%;
     height: 100%;
+  }
+  .link-container {
+    border-bottom: 4px solid var(--highlight-color-2);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    margin-left: 30%;
+    width: 30vh;
+    height: 10vh;
+    background: var(--highlight-color-2);
+    border-top: var(--accent-color-2);
+  }
+  
+  a {
+    text-decoration: none;
+    font-style: italic;
+    font-weight: bold;
+    color : var(--highlight-color-1);
+  }
+  
+  a:hover, .link-container:hover {
+    background: var(--accent-color-2);
   }
  
