--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,12 @@
 }
 
 :root {
-  --body-color: #0a0442;
+  --body-color: #0b3c5d;
   --body-color-2:#191061;
   --body-color-3:#040023;
-  --highlight-color-1: #dd9800;
+  --highlight-color-1: #d9b310;
   --highlight-color-2: #2c2292;
-  --accent-color-1: #00e5e0;
-  --accent-color-2: #781196;
+  --accent-color: #328cc1;
 }
 
 .gallery {
@@ -65,7 +64,7 @@
   text-align: center;
   font-size: 55px;
   font: bold ;
-  border-bottom: 4px solid var(--body-color-2);
+  border-bottom: 4px solid var(--accent-color);
   color:white;
   margin-bottom: 15px;
   
@@ -98,8 +97,8 @@ body {
 }
 
 .box-input {
-  background: var(--highlight-color-2);
-  border-top:5px solid var(--body-color-2);
+  background: var(--body-color-2);
+  border-top:5px solid var(--accent-color);
   text-align: center;
   box-shadow: var(--body-color-3);
   border-radius: 5px;
@@ -158,11 +157,18 @@ p {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
-    margin-left: 30%;
+    width: 100%;
     width: 30vh;
     height: 10vh;
     background: var(--highlight-color-2);
     border-top: var(--accent-color-2);
+  }
+
+  .head-style
+  {
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--highlight-color-1);
   }
   
   .link-container > a {
@@ -175,4 +181,17 @@ p {
   a:hover, .link-container:hover {
     background: var(--accent-color-2);
   }
+
+.navbar {
+background: var(--body-color-3);
+color: var(--accent-color);
+font-weight: bold;
+}
+.navbar a{
+
+  color: var(--accent-color);
+font-weight: bold;
+
+}
+
  
