--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,9 @@
 
 :root {
   --body-color: #0b3c5d;
-  --body-color-2:#191061;
+  --body-color-2:#0b2644;
   --body-color-3:#040023;
   --highlight-color-1: #d9b310;
-  --highlight-color-2: #2c2292;
   --accent-color: #328cc1;
 }
 
@@ -20,8 +19,7 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 5vw);
-  grid-gap: 15px;
-  border-left: 5px solid var(--body-color-2);
+  grid-gap: 5px;
 }
 .gallery__img {
   width: 100%;
@@ -85,7 +83,7 @@
 
 .title {
   width: 300px;
-  border-bottom: 4px solid var(--highlight-color-2);
+  border-bottom: 4px solid var(--accent-color);
   padding: 50px;
   margin: 10px;
   font-weight: bold;
@@ -151,7 +149,7 @@ p {
     height: 100%;
   }
   .link-container {
-    border-bottom: 4px solid var(--highlight-color-2);
+    border-bottom: 4px solid var(--accent-color);
     position: relative;
     display: flex;
     align-items: center;
@@ -160,7 +158,7 @@ p {
     width: 100%;
     width: 30vh;
     height: 10vh;
-    background: var(--highlight-color-2);
+    background: var(--accent-color);
     border-top: var(--accent-color-2);
   }
 
