--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,13 +110,15 @@ p {
   color: var(--highlight-color-1);
   font-weight: bold;
   text-align: center;
+  top: 0;
+  right: 0;
 }
 
 #response-container {
-    width: 100%;
-    padding: 4% 2%;
-    box-sizing: border-box;
-    height: 100vh;
+  width: 100%;
+  padding: 4% 2%;
+  box-sizing: border-box;
+  height: 100vh;
   }
   
   .box {
@@ -128,14 +130,14 @@ p {
     line-height: 0;
   }
   
-  .box > img {
+  .box > a img {
     width: 200%;
     height: 90vh;
     object-fit: cover; 
     transition: .5s;
   }
   
-  .box > span {
+  .box:hover > span {
     font-size: 3.8vh;
     display: block;
     text-align: center;
@@ -143,11 +145,12 @@ p {
     line-height: 2.6;
   }
   
-  .box:hover { flex: 1 1 70%; }
+  .box:hover { flex: 1 1 50%; }
   .box:hover > img {
     width: 100%;
     height: 100%;
   }
+   
   .link-container {
     border-bottom: 4px solid var(--accent-color);
     position: relative;
@@ -155,8 +158,7 @@ p {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
-    width: 100%;
-    width: 30vh;
+    width: 40%;
     height: 10vh;
     background: var(--accent-color);
     border-top: var(--accent-color-2);
