--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,12 +106,11 @@ p {
   color: var(--highlight-color-1);
 }
 
-#priorsearchterms {
-  color: var(--highlight-color-1);
-  font-weight: bold;
-  text-align: center;
-  top: 0;
+.sticky{ 
+  width: auto; 
+  position: sticky;
   right: 0;
+  bottom: 0;
 }
 
 #response-container {
